WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167796
Doc generation failure in WebKitSecurityOrigin
https://bugs.webkit.org/show_bug.cgi?id=167796
Summary
Doc generation failure in WebKitSecurityOrigin
Olivier Blin
Reported
2017-02-03 09:18:49 PST
The doc generation fails in Source/WebKit2/UIProcess/API/gtk/WebKitSecurityOrigin.cpp:167: warning: Free-form return value description in webkit_security_origin_get_protocol. Use `Returns:' to avoid ambiguities.
Attachments
Patch
(1.43 KB, patch)
2017-02-03 09:24 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2017-02-03 09:24:19 PST
Created
attachment 300537
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-03 09:27:17 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 3
2017-02-03 10:46:54 PST
Comment on
attachment 300537
[details]
Patch Clearing flags on attachment: 300537 Committed
r211639
: <
http://trac.webkit.org/changeset/211639
>
WebKit Commit Bot
Comment 4
2017-02-03 10:46:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug