Doc generation failure in WebKitSecurityOrigin https://bugs.webkit.org/show_bug.cgi?id=167796

Patch by Olivier Blin <olivier.blin@softathome.com> on 2017-02-03
Reviewed by Michael Catanzaro.

* UIProcess/API/gtk/WebKitSecurityOrigin.cpp:
warning: Free-form return value description in webkit_security_origin_get_protocol. Use `Returns:' to avoid ambiguities.

Canonical link: https://commits.webkit.org/184842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211639 268f45cc-cd09-0410-ab3c-d52691b4dbfc